# context-lifecycle-engine

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: cle-reviewer.md
.github/workflows/: ci.yml
cle/: __init__.py  llm_provider.py  oplog.py
cle-claude-code-bundle/: PROMPT.md
cle/cli/: __init__.py  main.py
cle/detect/: __init__.py  clusters.py  embedders.py  episodes.py  signals.py  stability.py
cle/lifecycle/: __init__.py  engine.py  revalidator.py  tags.py  topology.py
cle/runtime/: __init__.py  container.py  metrics_volume.py  mounts.py
cle/store/: __init__.py  backends.py  commits.py  objects.py
dashboard/: README.md
dashboard/backend/: __init__.py  actions.py  app.py  demo.py  oplog_sse.py  reads.py
dashboard/frontend/: app.js  index.html  styles.css
docs/: BLUEPRINT.md  CAPABILITIES.md  METRICS.md
examples/: full_loop.sh  gdg_demo.py  gdg_ground_truth.json  incident_triage_agent.yaml  make_fixture.py  make_gdg_fixture.py  make_holdout.py  make_vectors.py  phrasing.py  prompt_history.jsonl  prompt_history_adversarial.jsonl  prompt_history_gdg.jsonl  prompt_history_holdout.jsonl  standup_digest_agent.yaml  status_report_agent.yaml  vectors.google-gemini-embedding-2-768.json  weekly_recap_agent.yaml  weekly_recap_agent_v2.yaml
examples/components/: incident_runbook.yaml  oncall_context.yaml  recap_format.yaml  standup_format.yaml  style_guide.yaml  team_context.yaml
examples/gdg_tools/: calendar_api.yaml  outreach_email.yaml  sponsor_crm.yaml
tests/integration/: test_weaviate.py
tests/property/: test_clustering.py  (+8 more)
(+20 files in other folders)
