[project]
name = "cle"
version = "0.1.0"
description = "Context Lifecycle Engine — reference implementation of the Agent OS series (parts 7-8)."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cle"]

[tool.pytest.ini_options]
# Tests import the package from the source tree; no install step required in CI.
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q --strict-markers"
