[project]
name = "cle"
version = "0.1.0"
description = "Context Lifecycle Engine — reference implementation of the Agent OS series (parts 7-8)."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
    "pyyaml>=6.0",
    "langchain>=1.3.14",
    "langchain-google-genai>=4.2.7",
    "langchain-ollama>=1.1.0",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
]

[project.scripts]
cle = "cle.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cle"]

[tool.pytest.ini_options]
# Tests import the package from the source tree; no install step required in CI.
pythonpath = [".", "examples"]
testpaths = ["tests"]
addopts = "-q --strict-markers"
